[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.4.3", features = ["dioxus-html"] }
dioxus-logger = "0.4.1"
dioxus-web = "0.4.3"
getrandom = { version = "0.2.12", features = ["js"] }
gloo-events = "0.2.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
gloo-utils = "0.2.0"
log = "0.4.20"
rand = "0.8.5"
web-sys = { version = "0.3.68", features = ["HtmlElement", "EventTarget", "Screen", "TouchEvent", "Touch", "TouchList"] }
