[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.0"
dioxus-hooks = "0.4.0"
dioxus-logger = "0.4.0"
dioxus-web = "0.4.0"
futures-util = "0.3.30"
getrandom = { version = "0.2.12", features = ["js"] }
gloo-events = "0.2.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
gloo-utils = "0.2.0"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
log = "0.4.20"
rand = "0.8.5"
tokio = { version = "1.36.0", features = ["time", "rt"] }
web-sys = { version = "0.3.68", features = [
    "HtmlElement",
    "EventTarget",
    "Screen",
    "TouchEvent",
    "Touch",
    "TouchList",
    "MouseEvent",
] }
